# seo_suite

./: .gitignore  README.md  presentation_content.md  presentation_slides.txt  render.yaml
backend/: .gitignore  Dockerfile  Project_Diagrams_College_Presentation.md  config.py  example.env  exceptions.py  gemini_chain.py  main.py  plagiarism_checker.py  pyproject.toml  render.yaml  requirements.txt  schemas.py  test_backend.py  test_seo_optimizer.py
backend/agents/: agent_manager.py
backend/auth/: __init__.py
backend/data/backlinks/: www.guargum.co.in.json
backend/data/competitors/: www.guargum.co.in.json
backend/prompts/: __init__.py  keyword_prompts.py
backend/routers/: __init__.py  backlink_router.py  competitor_router.py  keyword_router.py  seo_optimizer_router.py  serp_router.py  technical_seo_router.py
backend/schemas/: backlink_schemas.py  competitor_schemas.py  keyword_schemas.py  seo_optimizer_schemas.py  serp_schemas.py  technical_seo_schemas.py
backend/services/: __init__.py  backlink_service.py  competitor_analyzer.py  competitor_labs_service.py  keyword_research.py  keyword_suggestion.py  langchain_analysis.py  orchestrator.py  seo_optimizer.py  serp_analysis.py  technical_seo_service.py  volume_competition.py
backend/utils/: image_utils.py  screenshot_utils.py  web_scraper.py
frontend/: README.md  package.json  proxy.ts
frontend/app/: globals.css  layout.tsx  loading.tsx  page.tsx
frontend/app/admin/: actions.ts  page.tsx
frontend/app/backlinks/: page.tsx
frontend/app/blog/: page.tsx
frontend/app/competitor-analysis/: page.tsx
frontend/app/content-generation/: page.tsx
frontend/app/internal-linking/: page.tsx
frontend/app/keyword-research/: page.tsx
frontend/app/login/: page.tsx
frontend/app/seo-optimizer/: page.tsx
frontend/app/technical-seo/: page.tsx
frontend/components/: FeatureCard.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Services.tsx
frontend/components/admin/: LoginForm.tsx  SubmitButton.tsx
frontend/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  navigate-button.tsx  select.tsx  spinner.tsx  textarea.tsx
frontend/db/: supabase_blog_schema.sql
frontend/lib/: auth.ts
frontend/lib/api/: keywords.ts  (+1 more)
frontend/scripts/: seed.ts
frontend/types/: blog.ts
(+7 files in other folders)
