[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "aiohttp==3.11.11",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "beautifulsoup4==4.12.3",
    "cachetools==6.2.4",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "distro==1.9.0",
    "fastapi==0.124.4",
    "filetype==1.2.0",
    "google-ads==27.0.0",
    "google-ai-generativelanguage==0.6.15",
    "google-api-core==2.28.1",
    "google-api-python-client==2.187.0",
    "google-auth==2.44.0",
    "google-auth-httplib2==0.2.1",
    "google-genai==1.55.0",
    "google-generativeai==0.8.5",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.76.0",
    "grpcio-status==1.71.2",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httpx==0.28.1",
    "idna==3.11",
    "joblib==1.5.3",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "langchain==1.2.0",
    "langchain-core==1.2.1",
    "langchain-google-genai==4.0.0",
    "langgraph==1.0.5",
    "langgraph-checkpoint==3.0.1",
    "langgraph-prebuilt==1.0.5",
    "langgraph-sdk==0.3.0",
    "langsmith==0.4.59",
    "lxml==5.3.0",
    "numpy==2.3.5",
    "orjson==3.11.5",
    "ormsgpack==1.12.1",
    "packaging==25.0",
    "pillow==12.0.0",
    "playwright==1.49.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.6.1",
    "pyparsing==3.2.5",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "scikit-learn==1.8.0",
    "scipy==1.16.3",
    "sniffio==1.3.1",
    "starlette==0.50.0",
    "tenacity==9.1.2",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uritemplate==4.2.0",
    "urllib3==2.6.2",
    "uuid-utils==0.12.0",
    "uvicorn==0.38.0",
    "websockets==15.0.1",
    "xxhash==3.6.0",
    "zstandard==0.25.0",
]
